objects/Program_Perspective__c.object
<CustomObject>
    <description>This object holds the unique association of a Program Collection and a Perspective. 
When establishing a relationship between a Program or Program Collection and any other Program Collection, that relationship must be typified by a Perspective. Rather than require users to identify both the Perspective and Program Collectionwith each association, the association is instead drawn between the child record (Program or Program Collection) and the Collection Perspective, which encapsulates the unique collection for a particular consumption purpose.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Drives availability for selection in Program Relationship only</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collection Perspectives</relationshipLabel>
        <relationshipName>Program_Perspectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Name__c</fullName>
        <formula>IF( 
Active__c, 
Program_Group__r.Name +&quot;-&quot;+ Perspective__r.Name, 
Program_Group__r.Name + &quot;-&quot; + Perspective__r.Name + &quot; (Inactive)&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>CP{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_use_Plans_Direct__c</fullName>
        <label>In use – Plans - Direct</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_use_Plans_Indirect__c</fullName>
        <label>In use – Plans – Indirect</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_use_Staff_Direct__c</fullName>
        <label>In use – Staff – Direct</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_use_Staff_Indirect__c</fullName>
        <label>In use – Staff - Indirect</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perspective__c</fullName>
        <label>Perspective</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Perspective__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Perspective__c</referenceTo>
        <relationshipLabel>Collection Perspectives</relationshipLabel>
        <relationshipName>Program_Perspectives</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <label>Program Collection</label>
        <referenceTo>Program_Group__c</referenceTo>
        <relationshipLabel>Collection Perspectives</relationshipLabel>
        <relationshipName>Program_Perspectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <formula>Program_Group__c + &apos;-&apos; + Perspective__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Name</label>
        <type>Text</type>
    </fields>
    <label>Collection Perspective</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Perspectives</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Effective_Dates</fullName>
        <active>true</active>
        <description>Effective End Date Should be greater then Effective Start Date</description>
        <errorConditionFormula>Effective_Start__c &gt; Effective_End__c</errorConditionFormula>
        <errorDisplayField>Effective_Start__c</errorDisplayField>
        <errorMessage>The Effective Start date cannot be later than the Effective End date.</errorMessage>
    </validationRules>
</CustomObject>